test_regress/t/t_event_class_fire.out
%Error: Internal Error: t/t_event_class_fire.v:10:7: ../V3Delayed.cpp:#: No active to handle FireEvent
                                                   : ... note: In instance '$unit::Cls'
   10 |       ->> e;
      |       ^~~
                        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
